--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,1 @@
-php_value include_path "../ZendGdata-1.12.3/library"
+php_value include_path "/energysolforum.com/googlecalendar/ZendGdata-1.12.3/library"
